Do not use private compiler APIs in incremental compile task